--- a/.github/workflows/update_pages.yml
+++ b/.github/workflows/update_pages.yml
@@ -2,8 +2,9 @@
 name: Build and Deploy
 on:
   push:
-    branches:
-      - master
+    branches: [main]
+    
+  workflow_dispatch:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
